--- a/style.css
+++ b/style.css
@@ -254,3 +254,99 @@ Intro
 }
 
 
+/* 
+
+FEATURES
+
+*/
+
+.features__container {
+    padding: 96px 0px;
+    margin: 0 auto;
+    max-width: 1024px;
+
+}
+
+.features__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.features__subheader {
+    margin-bottom: 16px;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+}
+
+.features__header {
+    font-family: inter;
+    font-size: 48px;
+    font-weight: 900;
+
+}
+
+.features__header--color {
+    color: rgb(36, 62, 99);
+}
+
+.features__wrapper {
+    max-width: 1300px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.features__para {
+    margin-top: 16px;
+    margin-bottom: 40px;
+    color: rgb(124, 139, 161);
+    font-family: inter;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 29.25px;
+    max-width: 576px;
+    text-align: center;
+
+}
+
+.feature {
+    margin: 0px 16px;
+    padding: 32px 8px; 
+    display: flex;
+    max-width: calc(30%);
+
+
+}
+
+.feature__img {
+    padding: 24px;
+    font-size: 24px;
+    color: rgb(100, 21, 255);
+    border: 1px solid;
+    border-radius: 50px;
+    border-color: rgb(226, 232, 240);
+}
+
+.feature__text {
+    margin: 8px 0px 0px 16px;
+}
+
+.feature__name {
+    font-family: inter;
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: .6px;
+    color: rgb(36, 62, 99);
+}
+
+.feature__para {
+    margin-top: 16px;
+    font-family: inter;
+    font-weight: 500;
+    color: rgb(124, 139, 161);
+    line-height: 32px;
+}
+
+
