--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ FEATURES
     font-family: inter;
     font-size: 48px;
     font-weight: 900;
+    letter-spacing: 1px;
 
 }
 
@@ -350,3 +351,160 @@ FEATURES
 }
 
 
+/*
+
+QUALITY 
+
+*/
+
+.quality__container {
+    max-width: 1330px;
+    margin: 0 auto;
+}
+
+.quality__row {
+    margin: 0px  25px;
+    padding: 96px 0px;
+    display: flex;
+}
+
+.quality__text--wrapper {
+    margin-right: 64px;
+    max-width: 576px;
+}
+
+
+.quality__subheader {
+    padding-top: 32px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 1.5px;
+}
+
+.quality__header {
+    margin-top: 16px;
+    font-family: inter;
+    font-size: 48px;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    letter-spacing: 1px;
+}
+
+.quality__para {
+    margin-top: 16px;
+    font-family: inter;
+    font-size: 18px;
+    font-weight: 500;
+    color: rgb(124, 139, 161);
+    line-height: 32px;
+}
+
+
+.quality__button {
+    margin-top: 32px;
+    color: white;
+    border: 2px solid;
+    padding: 12px 32px;
+    border-radius: 50px;
+    list-style-type: none;
+    background-color: rgb(100, 21, 255);
+    font-family: inter;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.quality__button:hover {
+    background-color:rgb(80, 20, 200);
+    transition: all ease-in-out 300ms;
+}
+
+.quality__img {
+    max-width: 640px;
+    border: solid 1px;
+    border-radius: 4px;
+    border-color: rgb(226, 232, 240);
+}
+
+
+/*
+
+STEPS
+
+*/
+
+.steps__row {
+    margin: 0px 25px;
+    padding: 96px 0px;
+    display: flex;
+}
+
+.steps__img--wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.steps__img {
+    max-width: 640px;
+}
+
+.steps__text--wrapper {
+    margin-left: 64px;
+}
+
+.steps__subheader {
+    padding-top: 32px;
+    font-family: inter;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 1.5px;
+}
+
+.steps__header {
+    margin-top: 16px;
+    font-family: inter;
+    font-size: 48px;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    letter-spacing: 1px;
+}
+
+.steps__wrapper {
+    margin-top: 48px;
+}
+
+.step {
+    margin-top: 32px;
+    list-style-type: none;
+    display: flex;
+}
+
+.step__number {
+    font-family: inter;
+    font-size: 36px;
+    font-weight: 600;
+    color: rgb(203, 213, 224);
+}
+
+.step__text {
+    margin-left: 24px;
+    max-width: 320px;
+
+}
+
+.step__name {
+    font-family: inter;
+    font-size: 20px;
+    font-weight: 600;
+    color: rgb(36, 62, 99);
+}
+
+.step__para {
+    margin-top: 12px;
+    font-family: inter;
+    font-size: 14px;
+    font-weight: 500;
+    color: rgb(113, 128, 150);
+    line-height: 28px;
+}
